fix loading shim not covering entire area

--- a/src/fullctl/django/static/common/v2/app.css
+++ b/src/fullctl/django/static/common/v2/app.css
@@ -177,6 +177,11 @@ button:focus {
   outline: none;
 }
 
+/* to make loading shim cover entire area */
+.loading {
+  position: relative;
+}
+
 .loading-shim {
   position: absolute;
   top: 0px;
